2012-04-02 Lorenzo Natale <lorenzo.natale@iit.it>
    * Reorganization of control board interfaces in separate files
	* Added IEncodersTimed
	* Increase minor version number: 2.3.16
	
2012-03-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/src/ImageFile.cpp: support pgm.

2012-03-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/src/Image.cpp: correctly reallocate 
	memory when image type changes without change in dimension.

2012-03-27  Marco Randazzo <marco.randazzo@iit.it>
    * src/libYARP_dev/src/RemoteControlBoard.cpp
    
    fixed bug in method getPids(): the method was retrieving just the first pid of the list.
  
2012-03-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: add
	findNestedResourceFinder() function [thanks Lorenzo Natale]

	* src/libYARP_OS/harness/ResourceFinderTest.cpp: add
	test for nested sections in resource finders.

2012-03-23 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/include/yarp/os/impl/RunCheckpoints.h
	* src/libYARP_OS/src/Run.cpp
	* src/libYARP_OS/src/RunReadWrite.cpp
	* src/libYARP_OS/src/RunProcManager.cpp
	Added trace log to yarprun.

2012-03-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ResourceFinder.cpp: if context
	is set to an absolute path, rather than an application
	name, respect that [thanks Lorenzo Natale]

>>>>>>> .r9103
2012-03-19  Andrea Del Prete  <andrea.delprete@iit.it>
    * src/libYARP_math/src/SVD.cpp
    * src/libYARP_math/include/yarp/math/SVD.h
    * src/libYARP_math/harness/SVDTest.cpp
    Add SVD and pseudo-inverse for fat matrices (and related tests).
    
2012-03-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Network.cpp: respect timeout in
	Network::exists for sockets that are reachable but
	unresponsive.

	* src/libYARP_OS/harness/NetworkTest.cpp: add test to make
	sure timeout option in Network::write and Network::check
	are effective [thanks Ali Paikan]